[css] text-decoration:none no longer valid https://bugs.webkit.org/show_bug.cgi?id=101529

Reviewed by Ojan Vafai.

Source/WebCore:

This patch fixes an issue where the 'none' value was parsed as explicitly
'initial' value. However true in a sense that the initial value for the
'text-decoration' property is 'none', the value itself could not be parsed as
'initial'.

The getComputedStyle layout tests for 'text-decoration' and
'-webkit-text-decoration-line' CSS properties are updated with the correct
results.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseTextDecoration): When parsed, 'none' value
gets its own identifier value instead of explicit initial.

LayoutTests:

The getComputedStyle layout tests for 'text-decoration' and
'-webkit-text-decoration-line' CSS properties are updated with the correct
results for the 'none' value.

* fast/css/getComputedStyle/getComputedStyle-text-decoration-expected.txt:
* fast/css/getComputedStyle/script-tests/getComputedStyle-text-decoration.js:
* fast/css3-text/css3-text-decoration/getComputedStyle/getComputedStyle-text-decoration-line-expected.txt:
* fast/css3-text/css3-text-decoration/getComputedStyle/script-tests/getComputedStyle-text-decoration-line.js:
* inspector/console/console-format-style-whitelist-expected.txt:


Canonical link: https://commits.webkit.org/119930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134156 268f45cc-cd09-0410-ab3c-d52691b4dbfc